--- a/mysite.html
+++ b/mysite.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="https://kit.fontawesome.com/86d1d51810.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -54,6 +55,56 @@
         </div>
       </div>
     </div>
+    <div class="feature">
+      <div class="container">
+        <div class="feature-contents">
+          <div class="feature-text">
+            <h3>Feature</h3>
+            <p>
+              It is a long established fact that a reader will be distracted by the readable<br>
+              content of a page when looking at its layout.<br>
+              The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+            </p>
+          </div>
+          <div class="strength-items">
+            <section class="strength">
+              <span class="fab fa-android icon"></span>
+              <h5>Strength1</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                It has roots in a piece of classical Latin literature from 45 BC, 
+                making it over 2000 years old. Richard McClintock, a Latin professor
+                 at Hampden-Sydney College in Virginia, looked up one of the more
+                  obscure Latin words, consectetur
+              </p>
+            </section>
+            <section class="strength">
+              <span class="fas fa-bread-slice icon"></span>
+              <h5>strength2</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                It has roots in a piece of classical Latin literature from 45 BC, 
+                making it over 2000 years old. Richard McClintock, a Latin professor
+                 at Hampden-Sydney College in Virginia, looked up one of the more
+                  obscure Latin words, consectetur
+              </p>
+            </section>
+            <section class="strength">
+              <span class="fas fa-cat icon"></span>
+              <h5>Strength3</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                It has roots in a piece of classical Latin literature from 45 BC, 
+                making it over 2000 years old. Richard McClintock, a Latin professor
+                 at Hampden-Sydney College in Virginia, looked up one of the more
+                  obscure Latin words, consectetur
+              </p>
+            </section>
+          </div>
+        </div>
+      </div>
+    </div>
+    
   </main>
 </body>
 </html>
