--- a/mysite.html
+++ b/mysite.html
@@ -12,20 +12,20 @@
   <header>
     <div class="container">
       <div class="header-item">
-        <a href="#"><img class="header-logo" src="img/logo.png"></a>
+        <a href="#1"><img class="header-logo" src="img/logo.png"></a>
         <nav>
           <ul class="nav-list">
-            <li><a>Portfolio</a></li>
-            <li><a>Feature</a></li>
-            <li><a>Profile</a></li>
-            <li><a>Contact</a></li>
+            <li><a href="#2">Portfolio</a></li>
+            <li><a href="#3">Feature</a></li>
+            <li><a href="#4">Profile</a></li>
+            <li><a href="#5">Contact</a></li>
           </ul>
         </nav>
       </div>
     </div>
   </header>
   <main>
-    <div class="main-visual">
+    <div id="1" class="main-visual">
       <div class="container">
         <div class="main-visual-text">
           <h1 class="main-text">Lorem Ipsum</h1>
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div class="portfolio">
+    <div id="2" class="portfolio">
       <div class="container">
         <div class="portfolio-contents">
           <div class="portfolio-text">
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="feature">
+    <div id="3" class="feature">
       <div class="container">
         <div class="feature-contents">
           <div class="feature-text">
@@ -104,8 +104,79 @@
         </div>
       </div>
     </div>
-    
+    <div id="4" class="profile">
+      <div class="container">
+        <div class="profile-contents">
+          <div class="profile-text">
+            <h3>Profile</h3>
+            <p>
+              It is a long established fact that a reader will be distracted by the readable<br>
+              content of a page when looking at its layout.<br>
+              The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+            </p>
+          </div>
+          <div class="profile-main">
+            <div class="my-photo">
+              <div class="my-image"></div>
+            </div>
+            <div class="my-profile">
+              <section class="my-name">
+                <h4>MyName</h4>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                  It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. 
+                  Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, 
+                  looked up one of the more obscure Latin words, consectetur
+                </p>
+              </section>
+              <section class="my-skills">
+                <h4>MySkills</h4>
+                <p>
+                  HTML/CSS,JavaScript,JQuery,PhotoShop
+                </p>
+              </section>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="5" class="contact">
+      <div class="container">
+        <div class="contact-contents">
+          <div class="contact-text">
+            <h3>Contact</h3>
+            <p>
+              It is a long established fact that a reader will be distracted by the readable<br>
+              content of a page when looking at its layout.<br>
+              The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+            </p>
+          </div>
+          <div class="my-contact">
+            <div class="adress">
+              <h4>Mail</h4>
+              <a href="#">xxx@xxx.com</a>
+              <h4 class="tel">Tel</h4>
+              <a href="#">000-0000-0000</a>
+            </div>
+            <div class="sns">
+              <h4>SNS</h4>
+              <div class="awesome">
+                <i class="fab fa-facebook-f sns-icon"></i>
+                <i class="fab fa-twitter sns-icon"></i>
+                <i class="fab fa-instagram sns-icon"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="container">
+        <p class="webcamp">©︎ 2017 WebCamp</p>
+      </div>
+    </footer>
   </main>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
 
