--- a/mysite.html
+++ b/mysite.html
@@ -21,6 +21,13 @@
             <li><a href="#5">Contact</a></li>
           </ul>
         </nav>
+        <div id="hm-icon">
+          <a class="menu-trigger" href="#">
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
+        </div>
       </div>
     </div>
   </header>
