--- a/mysite.html
+++ b/mysite.html
@@ -159,17 +159,21 @@
           </div>
           <div class="my-contact">
             <div class="adress">
-              <h4>Mail</h4>
-              <a href="#">xxx@xxx.com</a>
-              <h4 class="tel">Tel</h4>
-              <a href="#">000-0000-0000</a>
+              <div class="adress-link">
+                <h4 class="link-title">Mail</h4>
+                <a href="#">xxx@xxx.com</a>
+              </div>
+              <div class="adress-link">
+                <h4 class="link-title">Tel</h4>
+                <a href="#">000-0000-0000</a>
+              </div>
             </div>
             <div class="sns">
               <h4>SNS</h4>
               <div class="awesome">
-                <i class="fab fa-facebook-f sns-icon"></i>
-                <i class="fab fa-twitter sns-icon"></i>
-                <i class="fab fa-instagram sns-icon"></i>
+                <span class="fab fa-facebook-f sns-icon"></span>
+                <span class="fab fa-twitter sns-icon"></span>
+                <span class="fab fa-instagram sns-icon"></span>
               </div>
             </div>
           </div>
