--- a/mysite.html
+++ b/mysite.html
@@ -188,6 +188,7 @@
   </main>
   <script src="js/jquery.min.js"></script>
   <script src="js/script.js"></script>
+  <audio src="sample.mp3" id="play-button"></audio>
 </body>
 </html>
 
